pm-project/infra/k8s/alloy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-alloy
  namespace: pm-project
  labels:
    app: grafana-alloy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-alloy
  template:
    metadata:
      labels:
        app: grafana-alloy
    spec:
      serviceAccountName: alloy-sa
      containers:
        - name: grafana-alloy
          image: grafana/alloy:latest
          args:
            - run
            - /etc/alloy/config.alloy
          ports:
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 4318
              name: otlp-http
          volumeMounts:
            - name: alloy-config-volume
              mountPath: /etc/alloy
      volumes:
        - name: alloy-config-volume
          configMap:
            name: alloy-config
