pm-project/infra/k8s/pm-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pm-api
  namespace: pm-project
  labels:
    app: pm-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pm-api
  template:
    metadata:
      labels:
        app: pm-api
    spec:
      containers:
        - name: pm-api
          image: alexnay/pm-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5130
          readinessProbe:
            tcpSocket:
              port: 5130
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5130
            initialDelaySeconds: 20
            periodSeconds: 30
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
