pm-project/infra/k8s/pm-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pm-api
  namespace: pm-project
  labels:
    app: pm-api
spec:
  type: ClusterIP
  selector:
    app: pm-api
  ports:
    - name: http
      protocol: TCP
      port: 5130
      targetPort: 5130
